Add style rules; get rid of cyclomatic complexity rule
Resolves #5

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,7 @@
     "accessor-pairs": "error",
     "array-callback-return": "error",
     "block-scoped-var": "error",
-    "complexity": ["warn", 7],
+    "complexity": "off",
     "consistent-return": "off",
     "curly": "error",
     "default-case": "off",
@@ -155,7 +155,85 @@
     "template-curly-spacing": ["error", "never"],
     "yield-star-spacing": "error",
 
-    "strict": ["error", "never"]
+    "strict": ["error", "never"],
+
+    "array-bracket-spacing": "error",
+    "block-spacing": "off",
+    // I'd prefer to enforce this, but ESLint v2 doesn't support my preference
+    "brace-style": "off",
+    // This is only off because of destructuring API responses. It should
+    // generally be adhered to, though.
+    "camelcase": "off",
+    "comma-spacing": "error",
+    "comma-style": "error",
+    "computed-property-spacing": "error",
+    "consistent-this": ["error", "self"],
+    "eol-last": "error",
+    "func-names": "off",
+    "func-style": "off",
+    "id-blacklist": "off",
+    "id-length": "off",
+    "id-match": "off",
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "jsx-quotes": "error",
+    "key-spacing": "error",
+    "keyword-spacing": "error",
+    "linebreak-style": "error",
+    "lines-around-comment": "error",
+    "max-depth": "error",
+    "max-len": ["error", 130],
+    "max-nested-callbacks": ["error", 3],
+    "max-params": ["error", 5],
+    "max-statements": "off",
+    "max-statements-per-line": "off",
+    // I'd like to enforce this, but 3rd party libs can be terrible sometimes
+    "new-cap": "off",
+    "new-parens": "error",
+    "newline-after-var": "off",
+    "newline-before-return": "off",
+    "newline-per-chained-call": "error",
+    "no-array-constructor": "error",
+    // Just don't do regrettable things with them
+    "no-bitwise": "off",
+    "no-continue": "off",
+    "no-inline-comments": "error",
+    "no-lonely-if": "error",
+    "no-mixed-spaces-and-tabs": "error",
+    "no-multiple-empty-lines": "error",
+    "no-negated-condition": "off",
+    "no-nested-ternary": "error",
+    "no-new-object": "error",
+    "no-plusplus": "off",
+    "no-restricted-syntax": "off",
+    "no-spaced-func": "error",
+    "no-ternary": "off",
+    "no-trailing-spaces": "error",
+    "no-underscore-dangle": "off",
+    "no-unneeded-ternary": "error",
+    "no-whitespace-before-property": "error",
+    "object-curly-spacing": "error",
+    "object-property-newline": "off",
+    // One var per line, unless they're uninitialized
+    "one-var": "off",
+    // Try to keep em on the same line. But if you declare many, you can add newlines.
+    "one-var-declaration-per-line": "off",
+    "operator-assignment": "off",
+    "operator-linebreak": "error",
+    "padded-blocks": ["error", "never"],
+    "quote-props": ["error", "as-needed"],
+    "quotes": ["error", "single", {"avoidEscape": true, "allowTemplateLiterals": true}],
+    "require-jsdoc": "off",
+    "semi": "error",
+    "semi-spacing": "error",
+    "sort-vars": "off",
+    "space-before-blocks": "error",
+    "space-before-function-paren": ["error", "never"],
+    "space-in-parens": "error",
+    "space-infix-ops": ["error", {"int32Hint": false}],
+    "space-unary-ops": "error",
+    "spaced-comment": "error",
+    "unicode-bom": "error",
+    "wrap-regex": "off"
   },
   "env": {
     "browser": true,
