Update rules for ESLint v3.3.0

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,8 +29,10 @@
     "no-obj-calls": "error",
     "no-regex-spaces": "error",
     "no-sparse-arrays": "error",
+    "no-template-curly-in-string": "error",
     "no-unexpected-multiline": "error",
     "no-unreachable": "error",
+    "no-unsafe-negation": "error",
     "use-isnan": "error",
     "valid-jsdoc": "error",
     "valid-typeof": "error",
@@ -75,7 +77,7 @@
     "no-magic-numbers": "off",
     "no-multi-spaces": "error",
     "no-multi-str": "error",
-    "no-native-reassign": "error",
+    "no-global-assign": "error",
     "no-new": "error",
     "no-new-func": "error",
     "no-new-wrappers": "error",
@@ -205,7 +207,7 @@
     "no-new-object": "error",
     "no-plusplus": "off",
     "no-restricted-syntax": "off",
-    "no-spaced-func": "error",
+    "func-call-spacing": "error",
     "no-ternary": "off",
     "no-trailing-spaces": "error",
     "no-underscore-dangle": "off",
@@ -225,6 +227,7 @@
     "require-jsdoc": "off",
     "semi": "error",
     "semi-spacing": "error",
+    "sort-keys": "off",
     "sort-vars": "off",
     "space-before-blocks": "error",
     "space-before-function-paren": ["error", "never"],
