--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/jmeas/pleaserc/issues"
   },
+  "peerDependencies": {
+    "eslint": "3.4.0"
+  },
   "homepage": "https://github.com/jmeas/pleaserc#readme"
 }
